<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">Metals Exchange</string>

    <string name="GOLD">Gold</string>
    <string name="SILVER">Silver</string>
    <string name="PLATINUM">Platinum</string>
    <string name="PALLADIUM">Palladium</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_rate">Rate</string>
    <string name="action_share">Share</string>
    <string name="action_upgrade_to_premium">Upgrade to Premium</string>


    <string name="action_refresh">Refresh</string>
    <string name="action_calculate">Calculate</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_weight_header">Weight</string>
    <string name="pref_currencies_header">Currencies</string>
    <string name="pref_notifications_header">Notifications</string>
    <string name="pref_data_sync_header">Data &amp; sync</string>
    <string name="pref_advanced_header">Advanced</string>


    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Disabled</string>
    <string name="pref_enable_notifications_default" translatable="false">false</string>

    <string name="pref_enable_sync_key" translatable="false">enable_sync</string>
    <string name="pref_enable_sync_label">Sync data</string>
    <string name="pref_enable_sync_true">Enabled</string>
    <string name="pref_enable_sync_false">Disabled</string>
    <string name="pref_enable_sync_default" translatable="false">false</string>
    <string name="pref_sync_frequency_key" translatable="false">sync_frequency</string>
    <string name="pref_history_business_days_key" translatable="false">sync_history_business_days</string>
    <string name="pref_history_business_days_label">Maximum history Size (Business days)</string>
    <string name="pref_sync_frequency_label">Sync frequency</string>
    <string name="pref_sync_frequency_3H">3 hours</string>
    <string name="pref_sync_frequency_6H">6 hours</string>
    <string name="pref_sync_frequency_12H">12 hours</string>
    <string name="pref_sync_frequency_24H">24 hours</string>


    <string name="pref_show_jewish_customs_key" translatable="false">show_jewish_customs</string>
    <string name="pref_show_jewish_customs_label">Show Jewish Customs</string>
    <string name="pref_show_jewish_customs_default">false</string>

    <string name="pref_units_label">Weight Units</string>
    <string name="pref_units_label_grams">Gram</string>
    <string name="pref_units_label_ounce">Troy Ounce</string>
    <string name="pref_units_label_grain">Grain</string>
    <string name="pref_units_label_baht">Baht</string>
    <string name="pref_units_label_pennyweight">Pennyweight</string>
    <string name="pref_units_label_tola">Tola</string>
    <string name="pref_units_label_dram">Dram</string>

    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_grams" translatable="false">grams</string>
    <string name="pref_units_ounce" translatable="false">ounce</string>
    <string name="pref_units_grain" translatable="false">grain</string>
    <string name="pref_units_baht" translatable="false">baht</string>
    <string name="pref_units_pennyweight" translatable="false">pennyweight</string>
    <string name="pref_units_tola" translatable="false">tola</string>
    <string name="pref_units_dram" translatable="false">dram</string>

    <string name="pref_main_currency_label">Default Currency</string>
    <string name="pref_main_other_currencies_label">Other Currencies</string>
    <string name="pref_main_other_currencies_summary">Select maximum 3 additional currencies</string>

    <string name="pref_main_currency_label_ils">Israel Shekel</string>
    <string name="pref_main_currency_label_usd">US Dollar</string>
    <string name="pref_main_currency_label_eur">Euro</string>
    <string name="pref_main_currency_label_gbp">British Pound</string>
    <string name="pref_main_currency_label_cad">Canada Dollar</string>
    <string name="pref_main_currency_label_dkk">Denmark Krone</string>
    <string name="pref_main_currency_label_nok">Norway Krone</string>
    <string name="pref_main_currency_label_sek">Sweden Krona</string>
    <string name="pref_main_currency_label_chf">Switzerland Franc</string>
    <string name="pref_main_currency_label_jod">Jordanian dinar</string>
    <string name="pref_main_currency_label_egp">Egypt Pound</string>


    <string name="pref_main_currency_key" translatable="false">main_currency</string>
    <string name="pref_main_other_currencies_key" translatable="false">other_currencies</string>

    <string name="pref_main_currency_ils" translatable="false">ILS</string>
    <string name="pref_main_currency_usd" translatable="false">USD</string>
    <string name="pref_main_currency_eur" translatable="false">EUR</string>
    <string name="pref_main_currency_gbp" translatable="false">GBP</string>
    <string name="pref_main_currency_cad" translatable="false">CAD</string>
    <string name="pref_main_currency_dkk" translatable="false">DKK</string>
    <string name="pref_main_currency_nok" translatable="false">NOK</string>
    <string name="pref_main_currency_sek" translatable="false">SEK</string>
    <string name="pref_main_currency_chf" translatable="false">CHF</string>
    <string name="pref_main_currency_jod" translatable="false">JOD</string>
    <string name="pref_main_currency_egp" translatable="false">EGP</string>

    <string name="pref_rates_status_key" translatable="false">rates-status</string>

    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>
    <string name="format_full_friendly_time">Last updated: <xliff:g id="date">%1$s</xliff:g>, <xliff:g id="hour">%2$s</xliff:g></string>
    <string name="sync_account_type" translatable="false">metalsexchange.com</string>
    <string name="content_authority" translatable="false">com.kobi.metalsexchange.app</string>
    <string name="pref_last_notification" translatable="false">last_notification</string>

    <string name="zecher_machatzit_hashekel">Zecher L’Machatzit Hashekel</string>
    <string name="zecher_machatzit_hashekel_details">10 gr of pure silver: %1$s\nFor Machmirim add VAT.</string>
    <string name="about_zecher_machatzit_hashekel">What is this?</string>

    <string name="pidyon_haben">Pidyon Haben</string>
    <string name="pidyon_haben_details">100 gr of pure silver: %1$s\nFor Machmirim add VAT.</string>
    <string name="about_pidyon_haben">What is this?</string>

    <string name="about">The metals rates are taken from <a href="http://www.kitco.com/">KITCO</a></string>
    <string name="about_continue">Continue..</string>

    <string name="copy_to_clipboard_toast">The value %1$s was copied</string>

    <!-- error messages -->
    <string name="error_no_internet_connection">No Internet connection!</string>
    <string name="error_server_response_not_valid">Server response is not valid</string>
    <string name="error_no_response_from_server">No response from server</string>
    <string name="empty_rates_list_startup">Loading data...</string>
    <!--<string name="empty_rates_list">No Rates Information Available</string>-->
    <string name="empty_rates_list_no_network">No rates information available. The network is not available.</string>
    <string name="empty_rates_list_server_down">No rates information available. The server is not returning data.</string>
    <string name="empty_rates_list_server_error">No rates information available. The server is not returning valid data. Please check for an updated version of \'Metals Exchange\'.</string>
    <string name="empty_rates_list_invalid">No rates information available. The query is not recognized by the rates server.</string>


    <string name="calculator_fragment_name">Calculator</string>
    <string name="calculator_gold_purity">Gold Purity</string>
    <string name="calculator_weight">Weight</string>
    <string name="calculator_weight_gram">Weight(g)</string>
    <string name="calculator_weight_ounce">Weight(oz t)</string>
    <string name="calculator_weight_grain">Weight(gr)</string>
    <string name="calculator_weight_baht">Weight(฿)</string>
    <string name="calculator_weight_pennyweight">Weight(dwt)</string>
    <string name="calculator_weight_tola">Weight(tola)</string>
    <string name="calculator_weight_dram">Weight(dr)</string>
    <string name="calculator_copy_action">Copy</string>
    <string name="calculator_copy_action_toast">Price copied</string>


    <string name="karat_enum_24">24 Karat</string>
    <string name="karat_enum_22">22 Karat</string>
    <string name="karat_enum_18">18 Karat</string>
    <string name="karat_enum_14">14 Karat</string>
    <string name="karat_enum_10">10 Karat</string>
    <string name="karat_enum_9">9 Karat</string>
    <string name="karat_enum_8">8 Karat</string>
    
    
    <string name="upgrade_to_premium_description">\u2022 Calculator \n
                            \n
                            \u2022 Currencies: \n
                            \u2015 Canada Dollar\n
                            \u2015 Denmark Krone\n
                            \u2015 Norway Krone\n
                            \u2015 Sweden Krona\n
                            \u2015 Switzerland Franc\n
                            \u2015 Jordanian dinar\n
                            \u2015 Egypt Pound\n
                            \n
                            \u2022 Weight Units: \n
                            \u2015 Grain\n
                            \u2015 Baht\n
                            \u2015 Pennyweight\n
                            \u2015 Tola\n
                            \u2015 Dram\n
                            \n
                            \u2022 Maximum history Size (Business days): 300</string>
</resources>